# Cal_Proj

./: CMakeLists.txt  README.md
INSPECT_IT/: .gitignore  CMakeLists.txt  main.cpp
INSPECT_IT/resources/: .~lock.BellmanFord.csv#  AgenteEconomico.h  AlgorithmPerformanceTest.h  AutoridadePublica.cpp  Brigada.h  Data.cpp  Data.h  Graph.h  HeuristicsFindRoute.h  Local.h  MapImport.h
INSPECT_IT/resources/graphs/MAPS_INSPECT_IT/PenafielTeste/: penafiel_strong_edges.txt
INSPECT_IT/resources/graphs/MAPS_INSPECT_IT/PortoTeste/: porto_strong_nodes_xy.txt
INSPECT_IT/resources/graphs/MAPS_INSPECT_IT/WindowConfiguration/: window.txt
INSPECT_IT/src/: BellmanFord.csv  agentes.txt  brigadas.txt
INSPECT_IT/src/Algorithms/: AlgorithmPerformanceTest.cpp  AlgorithmPerformanceTest.h  Conectividade.h  HeuristicsFindRoute.h
INSPECT_IT/src/Controller/: RouteViewCalc.cpp  RouteViewCalc.h
INSPECT_IT/src/GraphViewer/: graphviewer.cpp  graphviewer.h
INSPECT_IT/src/MAPS_INSPECT_IT/PenafielTeste/: penafiel_full_edges.txt
INSPECT_IT/src/Model/: AutoridadePublica.cpp  AutoridadePublica.h  Brigada.cpp  Data.cpp  Graph.h  Local.cpp
INSPECT_IT/src/Utils/: MapImport.h
INSPECT_IT/src/View/: menus.cpp  menus.h
Inspect/: CMakeLists.txt  agentes.txt  main.cpp
Inspect/Tests/: agentes.txt  brigadas.txt  tests.cpp
Inspect/lib/googletest-master/googlemock/docs/: CookBook.md
Inspect/lib/googletest-master/googlemock/scripts/: gmock_doctor.py  upload.py
Inspect/lib/googletest-master/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc
Inspect/lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc  gmock_output_test.py
Inspect/lib/googletest-master/googletest/samples/: sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample9_unittest.cc
Inspect/lib/googletest-master/googletest/scripts/: common.py  gen_gtest_pred_impl.py  upload.py
Inspect/lib/googletest-master/googletest/src/: gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
Inspect/lib/googletest-master/googletest/test/: googletest-break-on-failure-unittest_.cc  gtest_unittest.cc
Inspect/src/: AgenteEconomico.h  AutoridadePublica.cpp  AutoridadePublica.h  Graph.h  HeuristicsFindRoute.h  Local.cpp  MapImport.h  menus.cpp  menus.h  utils.cpp  utils.h
Inspect/src/GraphViewer/: README.md
Inspect/src/GraphViewer/example/: CMakeLists.txt  main.cpp
Inspect/src/GraphViewer/example/Tests/: CMakeLists.txt  main.cpp  tests.cpp
Inspect/src/GraphViewer/example/resources/: AgenteEconomico.cpp  AgenteEconomico.h  AutoridadePublica.cpp  AutoridadePublica.h  Conectividade.cpp  Conectividade.h  Graph.h  HeuristicsFindRoute.cpp  HeuristicsFindRoute.h  Local.cpp  MapImport.cpp  MapImport.h  MutablePriorityQueue.h  RouteViewCalc.cpp  RouteViewCalc.h  agentes.txt  brigadas.txt  menus.cpp  menus.h  utils.cpp  utils.h
Inspect/src/INSPECT_IT/example/: CMakeLists.txt  main.cpp
Inspect/src/INSPECT_IT/example/resources/: AutoridadePublica.cpp  Graph.h  menus.h  (+2 more)
Inspect/src/INSPECT_IT/src/: CMakeLists.txt  main.cpp
Inspect/src/text/: agentes.txt  brigadas.txt
Inspect_It/: CMakeLists.txt  main.cpp
Inspect_It/Tests/: tests.cpp
Inspect_It/src/: AgenteEconomico.cpp  AgenteEconomico.h  AutoridadePublica.cpp  AutoridadePublica.h  Brigada.cpp  Brigada.h  Data.cpp  Data.h  Erro.h  Graph.h  Local.h  MapImport.cpp  menus.cpp  utils.cpp  utils.h
Inspect_It/src/GraphViewer/example/: CMakeLists.txt
Inspect_It/src/text/: agentes.txt  brigadas.txt
Trabalho/: .gitignore  AgenteEconomico.cpp  AgenteEconomico.h  Autoridade_Publica.cpp  Autoridade_Publica.h  CMakeLists.txt  Denuncia.cpp  Inspetor.cpp  MutablePriorityQueue.h  graph.cpp  graph.h  inspetor.h  main.cpp  menus.cpp  menus.h  node.cpp  node.h  utils.cpp  utils.h
Trabalho/Header/: AgenteEconomico.h  Autoridade_Publica.h  Brigada.h  Denuncia.h  FileUtils.h  Inspetor.h  Local.h  MutablePriorityQueue.h  connection.h  graph.h  menus.h  node.h  utils.h
Trabalho/Maps/PortugalMaps/Ermesinde/: edges_ermesinde.txt  nodes_lat_lon_ermesinde.txt  nodes_x_y_ermesinde.txt
Trabalho/Maps/PortugalMaps/Fafe/: nodes_lat_lon_fafe.txt
Trabalho/Maps/PortugalMaps/Lisboa/: edges_lisboa.txt  nodes_lat_lon_lisboa.txt
Trabalho/Maps/PortugalMaps/Maia/: edges_maia.txt
Trabalho/Maps/PortugalMaps/Porto/: edges_porto.txt
Trabalho/Maps/PortugalMaps/Viseu/: nodes_x_y_viseu.txt
Trabalho/Maps/TagExamples/Aveiro/: t02_tags_aveiro.txt  t06_tags_aveiro.txt  t11_tags_aveiro.txt
Trabalho/Maps/TagExamples/Braga/: t06_tags_braga.txt  t08_tags_braga.txt  t11_tags_braga.txt
Trabalho/Maps/TagExamples/Coimbra/: t02_tags_coimbra.txt  t08_tags_coimbra.txt  t09_tags_coimbra.txt  t10_tags_coimbra.txt
Trabalho/Maps/TagExamples/Ermesinde/: t05_tags_ermesinde.txt  t08_tags_ermesinde.txt  t09_tags_ermesinde.txt  t10_tags_ermesinde.txt  t11_tags_ermesinde.txt
Trabalho/Maps/TagExamples/Fafe/: t04_tags_fafe.txt  t06_tags_fafe.txt
Trabalho/Maps/TagExamples/Gondomar/: t04_tags_gondomar.txt  t07_tags_gondomar.txt  t11_tags_gondomar.txt
Trabalho/Maps/TagExamples/Lisboa/: t03_tags_lisboa.txt  t05_tags_lisboa.txt
Trabalho/Maps/TagExamples/Maia/: t01_tags_maia.txt  t07_tags_maia.txt  t08_tags_maia.txt  t09_tags_maia.txt
Trabalho/Maps/TagExamples/Porto/: t02_tags_porto.txt  t08_tags_porto.txt  t10_tags_porto.txt
Trabalho/Maps/TagExamples/Portugal/: t02_tags_portugal.txt  t06_tags_portugal.txt  t09_tags_portugal.txt
Trabalho/Maps/TagExamples/STCPRoutes/: exemplo.txt  metro_routes_porto.txt  stcp_routes_porto.txt
Trabalho/Maps/TagExamples/Viseu/: t03_tags_viseu.txt  t04_tags_viseu.txt  t08_tags_viseu.txt
Trabalho/Source/: AgenteEconomico.cpp  Autoridade_Publica.cpp  Brigada.cpp  Camiao.cpp  Data.cpp  Data.h  Denuncia.cpp  Empresa.cpp  Excecoes.cpp  FileUtils.cpp  Inspetor.cpp  Local.cpp  Oficina.cpp  Pessoa.cpp  Servico.cpp  connection.cpp  graph.cpp  graphviewer.cpp  main.cpp  menus.cpp  node.cpp  utils.cpp
Trabalho/TextFiles/: agente_economico.txt  brigadas.txt  denuncias.txt
(+265 files in other folders)
